chore: rename to "Better Github Star"

--- a/extension/ex.html
+++ b/extension/ex.html
@@ -519,7 +519,7 @@
 </svg><span data-view-component="true" class="d-inline">
               Star
 </span>              <span id="repo-stars-counter-star" aria-label="3 users starred this repository" data-singular-suffix="user starred this repository" data-plural-suffix="users starred this repository" data-turbo-replace="true" title="3" data-view-component="true" class="Counter js-social-count">3</span>
-</button><div class="float-left btn-group react-user-list-group" style="margin-left: 8px; display: flex;"><button class="btn btn-sm" style="border-top-right-radius: 0px; border-bottom-right-radius: 0px; margin-right: -1px;">收藏</button><button class="btn btn-sm px-2" aria-label="Better Star options" style="border-top-left-radius: 0px; border-bottom-left-radius: 0px;">
+</button><div class="float-left btn-group react-user-list-group" style="margin-left: 8px; display: flex;"><button class="btn btn-sm" style="border-top-right-radius: 0px; border-bottom-right-radius: 0px; margin-right: -1px;">收藏</button><button class="btn btn-sm px-2" aria-label="Better Github Star options" style="border-top-left-radius: 0px; border-bottom-left-radius: 0px;">
     <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-triangle-down">
         <path d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"></path>
     </svg>
