--- a/extension/options.html
+++ b/extension/options.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Better Star Settings</title>
+    <title>Better Github Star Settings</title>
     <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="options.css">
   </head>
   <body>
     <div class="global-header">
       <div class="logo-area">
-        <h1>Better Star</h1>
+        <h1>Better Github Star</h1>
         <span class="badge">Configuration</span>
       </div>
     </div>
