--- a/extension/options.html
+++ b/extension/options.html
@@ -64,6 +64,7 @@
     </div>
     <script src="lib/storage.js"></script>
     <script src="lib/shard.js"></script>
+    <script src="lib/github.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
